while/tests/invalid-parsing/Parsing_Invalid_18.while
int f(int x) {
    return x + 1;
}

int g() {
    return f();
}